<resources>
    <string name="app_name">Submission4</string>
    <string name="title">judul</string>
    <string name="rating">Rating</string>`
    <string name="imgdes">Gambar</string>
    <string name="detail">detail</string>
    <string name="detaildescription">loreimpsunm dimafdf</string>
    <string name="release">release</string>
    <string name="search">Cari</string>
    <string name="play">Main Sekarang</string>
    <string name="cooming">Akan Datang</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="setting">Setting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ind">Indonesia</string>
    <string name="eng">English</string>
    <string name="favorit">Favorit</string>
</resources>
