<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_up"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_playing"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/play" />
        <item
            android:id="@+id/nav_cooming"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/cooming" />
        <item
            android:id="@+id/nav_favorit"
            android:icon="@android:drawable/star_off"
            android:title="@string/favorit" />


    </group>
    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_setting"
            android:icon="@android:drawable/ic_popup_sync"
            android:title="@string/setting" />

    </group>


</menu>
